website/versioned_docs/version-2.0.0-alpha.10/web.md
---
id: version-2.0.0-alpha.10-web
title: web package
hide_title: true
original_id: web
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## web package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./web.authcontainer.md) |  |
|  [BaseAPIClient](./web.baseapiclient.md) |  |
|  [Container](./web.container.md) |  |
|  [GlobalJSONContainerStorage](./web.globaljsoncontainerstorage.md) |  |
|  [SkygearError](./web.skygearerror.md) |  |
|  [WebAPIClient](./web.webapiclient.md) |  |
|  [WebAuthContainer](./web.webauthcontainer.md) |  |
|  [WebContainer](./web.webcontainer.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [decodeAuthResponse(r)](./web.decodeauthresponse.md) |  |
|  [decodeError(err)](./web.decodeerror.md) |  |
|  [decodeIdentity(i)](./web.decodeidentity.md) |  |
|  [decodeUser(u)](./web.decodeuser.md) |  |
|  [encodeIdentity(i)](./web.encodeidentity.md) |  |
|  [encodeQuery(query)](./web.encodequery.md) |  |
|  [encodeQueryComponent(s)](./web.encodequerycomponent.md) |  |
|  [encodeUser(u)](./web.encodeuser.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AuthResponse](./web.authresponse.md) |  |
|  [ContainerOptions](./web.containeroptions.md) |  |
|  [ContainerStorage](./web.containerstorage.md) |  |
|  [CustomTokenIdentity](./web.customtokenidentity.md) |  |
|  [JSONArray](./web.jsonarray.md) |  |
|  [JSONObject](./web.jsonobject.md) |  |
|  [OAuthIdentity](./web.oauthidentity.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./web.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./web.oauthwebredirectauthorizationurloptions.md) |  |
|  [PasswordIdentity](./web.passwordidentity.md) |  |
|  [SSOLoginOptions](./web.ssologinoptions.md) |  |
|  [StorageDriver](./web.storagedriver.md) |  |
|  [User](./web.user.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultContainer](./web.defaultcontainer.md) |  |
|  [localStorageStorageDriver](./web.localstoragestoragedriver.md) |  |
|  [VERSION](./web.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Identity](./web.identity.md) |  |
|  [JSONValue](./web.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./web.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./web.skygearerrorname.md) |  |

